--- a/src/main/resources/Application.properties
+++ b/src/main/resources/Application.properties
@@ -1,8 +1,7 @@
 #datasource
-spring.datasource.name=mydb
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/springboot
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&amp;characterEncoding=utf8
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 #mybatis
@@ -10,4 +9,6 @@ mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.type-aliases-package=com.demo.bootssm.domain
 #server
 server.port=8080
-server.tomcat.uri-encoding =UTF-8
+server.tomcat.uri-encoding=UTF-8
+#ÊÇ·ñ¿ªÆô¶¨Ê±ÈÎÎñ
+quartz.enabled=true
