--- a/src/main/resources/Application.properties
+++ b/src/main/resources/Application.properties
@@ -1,14 +1,14 @@
 #datasource
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&amp;characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://47.94.23.210:3306/library?useUnicode=true&amp;characterEncoding=utf8
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=woshidashen123abc
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 #mybatis
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.type-aliases-package=com.demo.bootssm.domain
 #server
-server.port=8080
+server.port=8081
 server.tomcat.uri-encoding=UTF-8
 #是否开启定时任务
 quartz.enabled=true
